queue->Queue for python 2

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,5 @@ install:
 
 script:
   # Your test script goes here
+  - anaconda-project run python --version
   - anaconda-project run python test_pregex.py 
