Fix bug in *.score, and add differentiable params

--- a/anaconda-project.yml
+++ b/anaconda-project.yml
@@ -46,6 +46,7 @@ downloads: {}
 #
 packages:
 - scipy
+- pytorch
 #
 # In the channels section, list any Conda channel URLs to be searched
 # for packages.
